--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "bin-dir": "bin"
     },
     "require": {
-        "scoutrace/scoutrace": "dev-master",
+        "scoutrace/scoutrace": "dev-master"
     },
     "require-dev": {
         "typo3/buildessentials": "dev-master",
